# prompt_board

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs  install.command
.github/workflows/: ci.yml  release.yml
packaging/macos/: Info.plist
scripts/: bundle_macos.sh  install_macos.sh
src/: app.rs  db.rs  main.rs  system.rs  template.rs
