[package]
name = "prompt_board"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4"
dirs = "5.0"
eframe = "0.33"
global-hotkey = "0.5"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
